--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/global.css" />
-    <script src="js/script.js"></script>
+    <script src="js/script.js" defer></script>
     <title>Quote Generator</title>
   </head>
   <body>
-    <div class="container">
+    <div class="quote">
       <p class="text">Clique no botao para gerar uma citacao interessante...</p>
       <p class="author"></p>
       <button class="button" id="quoteBtn">Gerar citacao</button>
